gitops/workloads/mesh-demo/peerauthentication-strict.yaml
# apiVersion: security.istio.io/v1
# kind: PeerAuthentication
# metadata:
#   name: default
#   namespace: mesh-demo
# spec:
#   mtls:
#     mode: STRICT
# ---
# apiVersion: security.istio.io/v1
# kind: AuthorizationPolicy
# metadata:
#   name: app-b-allow-app-a-only
#   namespace: mesh-demo
# spec:
#   selector:
#     matchLabels:
#       app: app-b
#   action: ALLOW
#   rules:
#     - from:
#         - source:
#             principals:
#               - cluster.local/ns/mesh-demo/sa/default
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: app-b-allow-app-a-only
  namespace: mesh-demo
spec:
  selector:
    matchLabels:
      app: app-b
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/mesh-demo/sa/app-a
